--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -62,14 +62,23 @@ function closeImage(el){ el.style.display="none"; }
 <div class="calculators-grid" id="fenceContainer"></div>
 </div>
 
+<!-- ================= FENCING ================= -->
+<h1>Fencing Quote Calculator</h1>
+<p class="intro">Click below to view fencing options.</p>
+<button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
+<div id="fencingSection" style="display:none;">
+<div class="calculators-grid" id="fenceContainer"></div>
+</div>
+
+<!-- ================= FENCING Change ================= -->
 <script>
 const fences=[
-{name:"Closeboard Featheredge", img:"/images/closeboard.webp"},
-{name:"Double Side Hit Miss", img:"/images/double-hit-miss.webp"},
-{name:"Double Side Concave", img:"/images/concave.webp"},
-{name:"Venetian", img:"/images/venetian.webp"},
-{name:"Urban Hedge", img:"/images/urban-hedge.webp"},
-{name:"Single Hit Miss", img:"/images/hit-miss.webp"}
+{name:"Closeboard Featheredge", img:"/images/closeboard.webp", prices:{4:22,5:27,6:32}},
+{name:"Double Side Hit Miss", img:"/images/double-hit-miss.webp", prices:{4:24,5:29,6:34}},
+{name:"Double Side Concave", img:"/images/concave.webp", prices:{4:25,5:30,6:36}},
+{name:"Venetian", img:"/images/venetian.webp", prices:{4:23,5:28,6:33}},
+{name:"Urban Hedge", img:"/images/urban-hedge.webp", prices:{4:21,5:26,6:31}},
+{name:"Single Hit Miss", img:"/images/hit-miss.webp", prices:{4:22,5:27,6:32}}
 ];
 
 const fenceContainer=document.getElementById("fenceContainer");
@@ -106,23 +115,31 @@ let len=parseFloat(document.getElementById("fLen"+id).value);
 let height=parseInt(document.getElementById("fHeight"+id).value);
 let gate=document.getElementById("fGate"+id).value==="yes";
 if(isNaN(len)||len<=0){document.getElementById("fRes"+id).innerHTML="Enter valid length."; return;}
+
 let gateWidth=1.2;
 let fenceLength=gate?len-gateWidth:len;
+
 let panels=Math.ceil(fenceLength/1.8);
-let posts=panels+(gate?2:1);
+let posts=panels + (gate?2:1);
 let gravelBoards=panels;
 let postcreteBags=posts*2;
-let labour=len*50; // Could scale by height if needed
-let total=labour + posts*17 + gravelBoards*17 + postcreteBags*6;
+
+let panelPrice=fences[id-1].prices[height];
+let totalPanelsCost=panels*panelPrice;
+let labour=len*50;
+let gateCost=gate?160:0;
+
+let total=totalPanelsCost + labour + posts*17 + gravelBoards*17 + postcreteBags*6 + gateCost;
+
 document.getElementById("fRes"+id).innerHTML=`
 <strong>Total:</strong> <h2>£${total.toFixed(2)}</h2>
 <ul>
-<li>Panels: ${panels}</li>
-<li>Posts: ${posts}</li>
-<li>Gravel Boards: ${gravelBoards}</li>
-<li>Postcrete Bags: ${postcreteBags}</li>
+<li>Panels: ${panels} × £${panelPrice} (${totalPanelsCost.toFixed(2)})</li>
+<li>Posts: ${posts} × £17</li>
+<li>Gravel Boards: ${gravelBoards} × £17</li>
+<li>Postcrete Bags: ${postcreteBags} × £6</li>
 <li>Height: ${height}ft</li>
-<li>Gate: ${gate?"Yes":"No"}</li>
+<li>Gate: ${gate?"Yes (+£160)":"No"}</li>
 </ul>
 <a href="tel:07735873694">Call Now</a>`;
 }
