--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -57,6 +57,13 @@ function closeImage(el){ el.style.display="none"; }
 <!-- ================= FENCING ================= -->
 <h1>Fencing Quote Calculator</h1>
 <p class="intro">Click below to view fencing options.</p>
+<p class="intro">
+Use this calculator to get an instant fencing estimate. Enter your total fence length,
+select your required height (4ft, 5ft, or 6ft), and choose whether a gate is needed.
+The calculator automatically works out the number of panels, posts, gravel boards,
+postcrete bags, labour (£50 per metre), and adds £160 if a gate is selected.
+All materials and labour are included in the final total.
+</p>  
 <button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
 <div id="fencingSection" style="display:none;">
 <div class="calculators-grid" id="fenceContainer"></div>
