--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -60,8 +60,8 @@ function closeImage(el){ el.style.display="none"; }
 <p class="intro">
 Use this calculator to get an instant fencing estimate. Enter your total fence length,
 select your required height (4ft, 5ft, or 6ft), and choose whether a gate is needed.
-The calculator automatically works out the number of panels, posts, gravel boards,
-postcrete bags, labour (£50 per metre), and adds £160 if a gate is selected.
+The calculator automatically works out the cost of materials, panels, posts, gravel boards,
+postcrete bags, labour, and adds £160 for a gate if required.
 All materials and labour are included in the final total.
 </p>  
 <button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
