--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -61,7 +61,7 @@ function closeImage(el){ el.style.display="none"; }
 Use this calculator to get an instant fencing estimate. Enter your total fence length,
 select your required height (4ft, 5ft, or 6ft), and choose whether a gate is needed.
 The calculator automatically works out the cost of materials, panels, posts, gravel boards,
-postcrete bags, labour, and adds £160 for a gate if required.
+postcrete bags, labour, and adds allows for a gate if required.
 All materials and labour are included in the final total.
 </p>  
 <button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
@@ -149,6 +149,11 @@ document.getElementById("fRes"+id).innerHTML=`
 <!-- ================= GUTTERING ================= -->
 <h1>Gutter Services Quote</h1>
 <p class="intro">Click below to view gutter service options.</p>
+<p class="intro">
+Use this calculator to get an instant gutter service estimate. Select the service type,
+enter the total length in metres, and the system will automatically calculate the cost
+based on our fixed per-metre rate. All pricing shown is transparent and includes labour.
+</p>
 <button class="calc-button" onclick="toggleSection('gutterSection')">View Options</button>
 <div id="gutterSection" style="display:none;">
 <div class="calculators-grid" id="gutterContainer"></div>
