--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -198,6 +198,12 @@ document.getElementById("gRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <!-- ================= PRESSURE WASHING ================= -->
 <h1>Pressure Washing</h1>
 <p class="intro">Click below to view pressure washing options.</p>
+<p class="intro">
+Use this calculator to get an instant pressure washing estimate. Select the surface type
+and enter the total area in square metres. The system will automatically calculate the
+price based on our fixed rate per m² or metre, depending on the service selected.
+All pricing includes professional cleaning and labour.
+</p>
 <button class="calc-button" onclick="toggleSection('pressureSection')">View Options</button>
 <div id="pressureSection" style="display:none;">
 <div class="calculators-grid" id="pressureContainer"></div>
