--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -248,6 +248,12 @@ document.getElementById("pRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <!-- ================= EXTERIOR DECORATING ================= -->
 <h1>Exterior Decorating</h1>
 <p class="intro">Click below to view exterior decorating options.</p>
+<p class="intro">
+Use this calculator to get an instant exterior decorating estimate. Select the service type
+and enter the required measurements in metres. For house painting, enter the length and height
+of each side of the property. The calculator will automatically work out the total area and
+apply the correct rate per m². All pricing includes materials and labour.
+</p>
 <button class="calc-button" onclick="toggleSection('decoratingSection')">View Options</button>
 <div id="decoratingSection" style="display:none;">
 <div class="calculators-grid" id="decoratingContainer"></div>
