--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quote Calculators</title>
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/fencing.html">
+<meta name="description" content="Instant online quote calculator for fencing, guttering, pressure washing and exterior decorating in Doncaster, Askern, Ackworth and surrounding areas. Transparent pricing from Home Repairs 4U.">
 <style>
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
