--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -386,6 +386,8 @@ document.getElementById("dRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <a href="tel:07735873694">Call Now</a>`;
 }
 </script>
-
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+</footer>
 </body>
 </html>
