--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -123,9 +123,20 @@ function toggleCalculator(id){ const el=document.getElementById(id); el.style.di
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
-
+<!-- ================= PAGE INTRO ================= -->
+<h1 style="text-align:center; margin-bottom:10px;">External Maintenance Services</h1>
+<p class="intro" style="text-align:center; max-width:700px; margin:0 auto 20px;">
+Welcome to Home Repairs 4U. Use our instant online calculators to get quick, accurate quotes for all your external maintenance needs, including:
+<ul style="list-style-type:disc; margin-left:40px; text-align:left;">
+<li>Fencing installation and gates</li>
+<li>Gutter clearing, cleaning, and replacement</li>
+<li>Pressure washing of driveways, roofs, patios, walls, and fences</li>
+<li>Exterior decorating including house painting, gates, and outer buildings</li>
+</ul>
+Simply choose a service below, enter your measurements, and get an immediate estimate.
+</p>
 <!-- ================= FENCING ================= -->
-<h1>Fencing Quote Calculator</h1>
+<h2>Fencing Quote Calculator</h2>
 <p class="intro">Click below to view fencing options.</p>
 <p class="intro">
 Use this calculator to get an instant fencing estimate. Enter your total fence length,
@@ -217,7 +228,7 @@ document.getElementById("fRes"+id).innerHTML=`
 <hr>
 
 <!-- ================= GUTTERING ================= -->
-<h1>Gutter Services Quote</h1>
+<h2>Gutter Services Quote</h2>
 <p class="intro">Click below to view gutter service options.</p>
 <p class="intro">
 Use this calculator to get an instant gutter service estimate. Select the service type,
@@ -266,7 +277,7 @@ document.getElementById("gRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <hr>
 
 <!-- ================= PRESSURE WASHING ================= -->
-<h1>Pressure Washing</h1>
+<h2>Pressure Washing</h2>
 <p class="intro">Click below to view pressure washing options.</p>
 <p class="intro">
 Use this calculator to get an instant pressure washing estimate. Select the surface type
@@ -316,7 +327,7 @@ document.getElementById("pRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <hr>
 
 <!-- ================= EXTERIOR DECORATING ================= -->
-<h1>Exterior Decorating</h1>
+<h2>Exterior Decorating</h2>
 <p class="intro">Click below to view exterior decorating options.</p>
 <p class="intro">
 Use this calculator to get an instant exterior decorating estimate. Select the service type
