--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -123,16 +123,22 @@ function toggleCalculator(id){ const el=document.getElementById(id); el.style.di
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
+
 <!-- ================= PAGE INTRO ================= -->
 <h1 style="text-align:center; margin-bottom:10px;">External Maintenance Services</h1>
+
 <p class="intro" style="text-align:center; max-width:700px; margin:0 auto 20px;">
 Welcome to Home Repairs 4U. Use our instant online calculators to get quick, accurate quotes for all your external maintenance needs, including:
-<ul style="list-style-type:disc; margin-left:40px; text-align:left;">
+</p>
+
+<ul style="list-style-type:disc; margin-left:40px; max-width:700px; margin:0 auto 20px; text-align:left;">
 <li>Fencing installation and gates</li>
 <li>Gutter clearing, cleaning, and replacement</li>
 <li>Pressure washing of driveways, roofs, patios, walls, and fences</li>
 <li>Exterior decorating including house painting, gates, and outer buildings</li>
 </ul>
+
+<p style="text-align:center; max-width:700px; margin:0 auto 30px;">
 Simply choose a service below, enter your measurements, and get an immediate estimate.
 </p>
 <!-- ================= FENCING ================= -->
