--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -125,22 +125,21 @@ function closeImage(el){ el.style.display="none"; }
 </script>
 
 <!-- ================= PAGE INTRO ================= -->
-<h1 style="text-align:center; margin-bottom:10px;">External Maintenance Services</h1>
-
-<p class="intro" style="text-align:center; max-width:700px; margin:0 auto 20px;">
+<div style="text-align:center; max-width:700px; margin:0 auto 30px;">
+<h1>External Maintenance Services</h1>
+<p>
 Welcome to Home Repairs 4U. Use our instant online calculators to get quick, accurate quotes for all your external maintenance needs, including:
 </p>
-
-<ul style="list-style-type:disc; margin-left:40px; max-width:700px; margin:0 auto 20px; text-align:left;">
+<ul style="list-style-type:disc; margin:0 auto 20px; padding-left:20px; text-align:left; display:inline-block;">
 <li>Fencing installation and gates</li>
 <li>Gutter clearing, cleaning, and replacement</li>
 <li>Pressure washing of driveways, roofs, patios, walls, and fences</li>
 <li>Exterior decorating including house painting, gates, and outer buildings</li>
 </ul>
-
-<p style="text-align:center; max-width:700px; margin:0 auto 30px;">
+<p>
 Simply choose a service below, enter your measurements, and get an immediate estimate.
 </p>
+</div>
 <!-- ================= FENCING ================= -->
 <h2>Fencing Quote Calculator</h2>
 <p class="intro">Click below to view fencing options.</p>
