--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -125,18 +125,18 @@ function closeImage(el){ el.style.display="none"; }
 </script>
 
 <!-- ================= PAGE INTRO ================= -->
-<div style="text-align:center; max-width:700px; margin:0 auto 30px;">
-<h1>External Maintenance Services</h1>
-<p>
+<div style="max-width:700px; margin:0 auto 30px;">
+<h1 style="text-align:center;">External Maintenance Services</h1>
+<p style="text-align:center;">
 Welcome to Home Repairs 4U. Use our instant online calculators to get quick, accurate quotes for all your external maintenance needs, including:
 </p>
-<ul style="list-style-type:disc; margin:0 auto 20px; padding-left:20px; text-align:left; display:inline-block;">
+<ul style="list-style-type:disc; padding-left:20px; text-align:left;">
 <li>Fencing installation and gates</li>
 <li>Gutter clearing, cleaning, and replacement</li>
 <li>Pressure washing of driveways, roofs, patios, walls, and fences</li>
 <li>Exterior decorating including house painting, gates, and outer buildings</li>
 </ul>
-<p>
+<p style="text-align:center;">
 Simply choose a service below, enter your measurements, and get an immediate estimate.
 </p>
 </div>
