--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -4,8 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quote Calculators</title>
-<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/fencing.html">
-<meta name="description" content="Instant online quote calculator for fencing, guttering, pressure washing and exterior decorating in Doncaster, Askern, Ackworth and surrounding areas. Transparent pricing from Home Repairs 4U.">
 <style>
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
@@ -24,22 +22,7 @@ cursor: pointer; border: none; border-radius: 8px; transition: 0.3s;
 .close-button:hover { background: #555; }
 
 .calculators-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; }
-.calc-container {
-position: relative;
-border-radius: 12px;
-min-height: 350px;
-display: flex;
-flex-direction: column;
-justify-content: flex-end;
-align-items: center; /* <-- centers headings and buttons */
-text-align: center; /* <-- ensures text inside is centered */
-color: #fff;
-padding: 20px;
-background-size: cover;
-background-position: center;
-overflow: hidden;
-box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-}
+.calc-container { position: relative; border-radius: 12px; min-height: 350px; display: flex; flex-direction: column; justify-content: flex-end; color: #fff; padding: 20px; background-size: cover; background-position: center; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
 .calc-container::before { content: ''; position: absolute; inset: 0; background: rgba(0,0,0,0.4); z-index: 0; }
 .calc-container > * { position: relative; z-index: 1; }
 
@@ -60,77 +43,9 @@ h1 { font-size: 24px; }
 input, select { font-size: 16px; }
 .result { font-size: 15px; }
 }
-  /* HEADER STYLING */
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #27ae60;
-}
-
-.logo{
-max-height:90px;
-width:auto;
-}
-
-/* CALL BUTTON */
-.call-btn{
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#000;
-color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-}
-.call-btn:hover{
-background:#333;
-color:#fff;
-}
-
-/* FOOTER */
-.site-footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:25px 15px;
-margin-top:40px;
-font-size:14px;
-}
-
-.footer-services{
-background-color: black;
-padding: 20px;
-text-align: center;
-margin-top: 15px;
-}
-
-.footer-services a{
-color: white;
-margin: 0 10px;
-}
 </style>
 </head>
 <body>
-<header>
-<img src="/images/home-repairs-4u-doncaster.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
-</div>
-
-<br>
-
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
-</header>
 
 <script>
 function toggleSection(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block"; }
@@ -139,21 +54,8 @@ function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
 
-<!-- ================= PAGE INTRO ================= -->
-<div style="max-width:700px; margin:0 auto 30px;">
-<h1 style="text-align:center;">External Maintenance Services</h1>
-<p style="text-align:center;">
-Welcome to Home Repairs 4U. Use our instant online calculators to get quick, accurate quotes for all your external maintenance needs, including:
-</p>
-<ul style="list-style-type:disc; padding-left:20px; text-align:left;">
-<li>Fencing installation and gates</li>
-<li>Gutter clearing, cleaning, and replacement</li>
-<li>Pressure washing of driveways, roofs, patios, walls, and fences</li>
-<li>Exterior decorating including house painting, gates, and outer buildings</li>
-</ul>  
-</div>
 <!-- ================= FENCING ================= -->
-<h2>Fencing Quote Calculator</h2>
+<h1>Fencing Quote Calculator</h1>
 <p class="intro">Click below to view fencing options.</p>
 <p class="intro">
 Use this calculator to get an instant fencing estimate. Enter your total fence length,
@@ -245,7 +147,7 @@ document.getElementById("fRes"+id).innerHTML=`
 <hr>
 
 <!-- ================= GUTTERING ================= -->
-<h2>Gutter Services Quote</h2>
+<h1>Gutter Services Quote</h1>
 <p class="intro">Click below to view gutter service options.</p>
 <p class="intro">
 Use this calculator to get an instant gutter service estimate. Select the service type,
@@ -294,7 +196,7 @@ document.getElementById("gRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <hr>
 
 <!-- ================= PRESSURE WASHING ================= -->
-<h2>Pressure Washing</h2>
+<h1>Pressure Washing</h1>
 <p class="intro">Click below to view pressure washing options.</p>
 <p class="intro">
 Use this calculator to get an instant pressure washing estimate. Select the surface type
@@ -344,7 +246,7 @@ document.getElementById("pRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <hr>
 
 <!-- ================= EXTERIOR DECORATING ================= -->
-<h2>Exterior Decorating</h2>
+<h1>Exterior Decorating</h1>
 <p class="intro">Click below to view exterior decorating options.</p>
 <p class="intro">
 Use this calculator to get an instant exterior decorating estimate. Select the service type
@@ -414,8 +316,6 @@ document.getElementById("dRes"+id).innerHTML=`<strong>Total:</strong><h2>£${tot
 <a href="tel:07735873694">Call Now</a>`;
 }
 </script>
-<footer class="site-footer">
-© Home Repairs 4U | Askern DN6 | Call 07735 873694
-</footer>
+
 </body>
 </html>
