--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -67,6 +67,13 @@ All materials and labour are included in the final total.
 <button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
 <div id="fencingSection" style="display:none;">
 <div class="calculators-grid" id="fenceContainer"></div>
+  <p class="intro">
+Use this calculator to get an instant fencing estimate. Enter your total fence length,
+select your required height (4ft, 5ft, or 6ft), and choose whether a gate is needed.
+The calculator automatically works out the cost of materials, panels, posts, gravel boards,
+postcrete bags, labour, and adds allows for a gate if required.
+All materials and labour are included in the final total.
+</p> 
 </div>
 
 <!-- ================= FENCING Change ================= -->
