--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -53,7 +53,7 @@ function toggleCalculator(id){ const el=document.getElementById(id); el.style.di
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
-
+<h1>Fencing Quote Calculator</h1>
 <!-- ================= FENCING ================= -->
 <h1>Fencing Quote Calculator</h1>
 <p class="intro">Click below to view fencing options.</p>
