--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -7,8 +7,8 @@
 <style>
 body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
 h1 { text-align: center; margin-bottom: 10px; }
-.intro { text-align: center; margin-bottom: 20px; font-size: 16px; color: #555; }
-
+.intro 
+  { text-align: center; margin-bottom: 20px; font-size: 16px; color: #555; }
 .calc-button, .view-image-button, .quote-button, .close-button {
 cursor: pointer; border: none; border-radius: 8px; transition: 0.3s;
 }
@@ -53,7 +53,7 @@ function toggleCalculator(id){ const el=document.getElementById(id); el.style.di
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
-<h1>Fencing Quote Calculator</h1>
+
 <!-- ================= FENCING ================= -->
 <h1>Fencing Quote Calculator</h1>
 <p class="intro">Click below to view fencing options.</p>
