--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -53,6 +53,17 @@ function toggleCalculator(id){ const el=document.getElementById(id); el.style.di
 function openImage(id){ document.getElementById(id).style.display="block"; }
 function closeImage(el){ el.style.display="none"; }
 </script>
+  
+<h1>Popular Fence Types Available</h1>
+<p>Our most popular garden fences comes with concrete posts and rock face gravels boards</p>
+<ul>
+<li>Closeboard Featheredge.</li>
+<li>Doble Sided Hit And Miss.</li>
+<li>Closeboard Featheredge.</li>
+<li>Double Side Concave.</li>
+<li>Venetian Lats Single Side.</li>
+<li>Urban Hedge Double Side.</li>
+</ul>
 
 <!-- ================= FENCING ================= -->
 <h1>Fencing Quote Calculator</h1>
