--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -43,6 +43,9 @@ h1 { font-size: 24px; }
 input, select { font-size: 16px; }
 .result { font-size: 15px; }
 }
+h1, h2, h3, h4, h5, h6, p {
+text-align: center;
+} 
 </style>
 </head>
 <body>
