--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -59,14 +59,35 @@ function closeImage(el){ el.style.display="none"; }
   
 <h1>Popular Fence Types Available</h1>
 <p>Our most popular garden fences comes with concrete posts and rock face gravels boards</p>
-<ul>
-<li>Closeboard Featheredge.</li>
-<li>Doble Sided Hit And Miss.</li>
-<li>Closeboard Featheredge.</li>
-<li>Double Side Concave.</li>
-<li>Venetian Lats Single Side.</li>
-<li>Urban Hedge Double Side.</li>
-</ul>
+<details>
+<summary>Closeboard Featheredge</summary>
+<h2>Closeboard Featheredge</h2>
+<p>Your description text goes here.</p>
+</details>
+
+<details>
+<summary>Double Side Hit and Miss</summary>
+<h2>Double Side Hit and Miss</h2>
+<p>Your description text goes here.</p>
+</details>
+
+<details>
+<summary>Double Side Concave</summary>
+<h2>Double Side Concave</h2>
+<p>Your description text goes here.</p>
+</details>
+
+<details>
+<summary>Venetian Lays Single Side</summary>
+<h2>Venetian Lays Single Side</h2>
+<p>Your description text goes here.</p>
+</details>
+
+<details>
+<summary>Single Side Hit and Miss</summary>
+<h2>Single Side Hit and Miss</h2>
+<p>Your description text goes here.</p>
+</details>
 
 <!-- ================= FENCING ================= -->
 <h2>Fencing Quote Calculator</h2>
